--- a/src/index.css
+++ b/src/index.css
@@ -303,11 +303,19 @@
 }
 
 .product-image-wrapper {
+    position: relative;
     width: 100%;
     height: 250px;
     /* Altezza fissa per l'area immagine */
     padding: 16px;
     flex-shrink: 0;
+}
+
+.product-image-wrapper .bi-suit-heart {
+    position: absolute;
+    top: 20px;
+    left: 30px;
+    color: red;
 }
 
 .product-image {
