--- a/src/index.css
+++ b/src/index.css
@@ -318,6 +318,13 @@
     color: red;
 }
 
+.product-image-wrapper .bi-suit-heart-fill {
+    position: absolute;
+    top: 20px;
+    left: 30px;
+    color: red;
+}
+
 .product-image {
     width: 100%;
     height: 100%;
