--- a/src/index.css
+++ b/src/index.css
@@ -313,19 +313,28 @@ body {
 
 
 /* Immagine */
-
-.product-image-wrapper .bi-suit-heart {
-    position: absolute;
-    top: 20px;
-    left: 30px;
-    color: red;
+.product-card {
+    display: flex;
+    flex-direction: column;
 }
 
-.product-image-wrapper .bi-suit-heart-fill {
-    position: absolute;
-    top: 20px;
-    left: 30px;
-    color: red;
+.product-card>.bi-suit-heart,
+.product-card>.bi-suit-heart-fill {
+    display: block;
+    margin-left: auto;
+    /* lo spinge a destra */
+    margin-right: 10px;
+    margin-top: 10px;
+    font-size: 32px;
+    /* più grande */
+    color: var(--green-text);
+    cursor: pointer;
+}
+
+.product-card>.bi-suit-heart:hover,
+.product-card>.bi-suit-heart-fill:hover {
+    transform: scale(1.2);
+    transition: 0.2s ease;
 }
 
 .product-image {
