add percent discount in a badge and add style

--- a/src/index.css
+++ b/src/index.css
@@ -385,6 +385,15 @@ body {
     transition: 0.2s ease;
 }
 
+.badge-position {
+    position: relative;
+    top: 60px;
+}
+
+.product-description {
+    height: 120px;
+}
+
 /* Prezzo */
 .price-wrapper {
     display: flex;
