--- a/src/index.css
+++ b/src/index.css
@@ -419,6 +419,16 @@ body {
     transform: scale(1.2);
 }
 
+.position-hrt {
+    position: absolute;
+    z-index: 2;
+    top: 20px;
+    left: 20px;
+    background-color: #A9D6AB;
+    border-radius: 8px;
+    padding: 1px 5px;
+}
+
 .heart-btn {
     position: relative;
     z-index: 2;
